fix footer visibility

--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -20,7 +20,6 @@
         align-items: center;
     }
 
-
     &__developed {
         color: $deep-blue;
         font-size: 14px;
@@ -32,6 +31,7 @@
     @media(min-width: $tablet) {
         &__content {
             display: grid;
+            grid-template-rows: auto;
             grid-template-columns: 1fr 1fr 10px 10px 1fr 1fr;
             align-items: center;
         }
@@ -43,7 +43,7 @@
         }
     
         &__social {
-            grid-area: 1/2/1/6;
+            grid-area: 1/2/2/6;
             justify-self: center;
         }
     
