--- a/src/scss/blocks/_section.scss
+++ b/src/scss/blocks/_section.scss
@@ -46,7 +46,7 @@
         }
     }
 
-    &\--footer:not(&\--form) {
+    &\--footer {
         display: none;
     }
 
